# ros_supervisor

./: .gitignore  README.md  readme.md  run.sh
backend/: cli.py
backend/api/: main.py  routes.py  routes.py.bak.2026-01-02_204102  snapshot_daemon.py
backend/core/: graph_model.py  node_health.py  param_diff.py  param_inspector.py  param_reader.py  qos_inspector.py  qos_validator.py  ros_adapter.py  ros_context.py  tf_inspector.py  tf_validator.py  topic_activity.py  topic_rate_core.py
backend/scripts/: __init__.py  dump_graph.py  health_report.py  inspect_node.py  measure_rate.py  params_diff.py  params_diff_files.py  params_show.py  params_snapshot.py  qos_report.py  qos_validate.py  tf_report.py  tf_validate.py
backend/utils/: rate_calculator.py
ros_ws/src/ros_supervisor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/ros_supervisor/launch/: demo.launch.py  supervisor.launch.py
ros_ws/src/ros_supervisor/ros_supervisor/: cli.py
ui/src/: App.jsx  index.css
ui/src/components/: ErrorBoundary.jsx  GraphPanel.jsx  Layout.jsx  StatusBadge.jsx  SummaryCards.jsx
