<?xml version="1.0"?>
<package format="3">
  <name>ros_supervisor</name>
  <version>0.0.0</version>
  <description>ROS 2 wrapper package to launch ROS Supervisor backend (FastAPI + rclpy).</description>

  <maintainer email="pratyush402@gmail.com">Pratyush</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
